# GHOST

./: DeepChem_PubChem.ipynb  LICENSE  README.md  Reproduce_Results_Public_Datasets.ipynb  Tutorial_Threshold_Optimization_RF.ipynb  example_GHOST.ipynb  example_oob_threshold_optimization.ipynb  ghost_env.yml  library_example.ipynb  setup.cfg
data/: drugmatrix_data.pkl
ghostml/: __init__.py  ghost.py  test_ghost.py
notebooks/: DeepChem_MoleculeNet.ipynb  Tutorial_Threshold_Optimization_RF.ipynb  example_GHOST.ipynb  example_oob_threshold_optimization.ipynb  library_example.ipynb
notebooks/data/: serotonin_data.pkl
src/ghostml/: __init__.py  ghost.py  test_ghost.py
tests/: test_ghost.py
