##########################
# Setup.py Configuration #
##########################
[metadata]
name = ghostml
version = 0.1.0
long_description = file: README.md

# URLs associated with the project
url = https://github.com/rinikerlab/GHOST
download_url = https://github.com/rinikerlab/GHOST/releases
project_urls =
    Bug Tracker = https://github.com/rinikerlab/GHOST/issues
    Source Code = https://github.com/rinikerlab/GHOST

# Author information
author = Carmen Esposito
# author_email = ...
maintainer = Greg Landrum
# maintainer_email = ...

# License Information
license = MIT
license_file = LICENSE

[options]
# Requirements (formerly known as requirements.txt)
install_requires =
    numpy
    pandas
    sklearn

# Where is my code (Part 1/3)
packages = find:
# Where is my code (Part 2/3)
package_dir =
    = src

[options.packages.find]
# Where is my code (Part 3/3)
where = src
