##########################
# Setup.py Configuration #
##########################
[metadata]
name = ghostml
version = 0.3.0
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/rinikerlab/GHOST
project_urls =
    Bug Tracker = https://github.com/rinikerlab/GHOST/issues
    Source Code = https://github.com/rinikerlab/GHOST

# Author information
author = Carmen Esposito
# author_email = ...
maintainer = Greg Landrum
# maintainer_email = ...

# License Information
license = MIT
license_file = LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Requirements (formerly known as requirements.txt)
install_requires =
    numpy
    pandas
    scikit-learn

package_dir =
    = src
packages = find:

python_requires = >=3.6

[options.packages.find]
where = src
